<resources>
    <string name="app_name">DoctorsDoor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_phone">Phone No</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="employee">Employee</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Don\'t have an account?  <u><b>Sign Up</b></u></string>
    <string name="go_without_login">Go Without  login</string>
    <string name="name">First Name</string>
    <string name="phone">Phone</string>
    <string name="birthdate">BirthDay</string>
    <string name="age">Age</string>
    <string name="e_mail">Email</string>
    <string name="uhid">UHID</string>
    <string name="appointment_date">Date</string>
    <string name="appointment_time">Time</string>
    <string name="relationship">Releationship</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_not_selected">Please Select User</string>
    <string name="country">Country</string>
    <string name="lastname">Last Name</string>
    <string name="degree">Degree</string>
    <string name="experience">Experience</string>
    <string name="registration">Registeration Number</string>
    <string name="newfee">New Fee</string>
    <string name="old_fee">Old Fee</string>
    <string name="consultant">Consulatant</string>
    <string name="bank_no">Bank Account No</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_city">City</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="loading">Loading..</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="title_activity_hospital_list">HospitalListActivity</string>
</resources>
