<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ddlogo"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="3"
        android:padding="@dimen/activity_vertical_margin">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_usertype"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/rb_doctor"
                android:text="@string/doctor"
                android:layout_weight="1"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/patient"
                android:textColor="@color/colorPrimaryDark"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/employee"
                android:textColor="@color/colorPrimaryDark"
                />

        </RadioGroup>

    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/edt_phno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:background="@drawable/cornor_rect_editext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="5dp"
                    android:maxLines="1"
                    android:singleLine="true" />




                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:imeActionId="6"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:background="@drawable/cornor_rect_editext"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_sign_in"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/txt_fp"
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/forgot_password"
            android:textSize="@dimen/activity_horizontal_margin"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/cornor_rect_editext"
            android:id="@+id/btn_search"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/go_without_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_signup"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="@string/signup"/>

    </LinearLayout>
</LinearLayout>