<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_back">

    <include
        android:id='@+id/toolbar'
        layout='@layout/toolbar' />


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_patient_register"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="15dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:id="@+id/iv_add1"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:id="@+id/iv_add2"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:id="@+id/iv_add3"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_hospname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_registration"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextLabel_Custom">

                    <EditText
                        android:id="@+id/edt_hospital_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:hint="@string/hospital_name"
                        android:inputType="text|textCapSentences|textNoSuggestions"
                        android:maxLength="128"
                        android:padding="7dp"
                        android:singleLine="true"
                        android:textSize="@dimen/login_text_size" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_registration"
                        android:layout_weight="1"
                        app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                        app:hintTextAppearance="@style/TextLabel_Custom">

                        <AutoCompleteTextView
                            android:id="@+id/edt_hospital_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:hint="@string/hospital_city"
                            android:inputType="text|textCapSentences|textNoSuggestions"
                            android:maxLength="128"
                            android:padding="7dp"
                            android:singleLine="true"
                            android:textSize="@dimen/login_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_registration"
                        android:layout_weight="1"
                        app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                        app:hintTextAppearance="@style/TextLabel_Custom">

                        <AutoCompleteTextView
                            android:id="@+id/edt_hospital_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:hint="@string/state"
                            android:inputType="text|textCapSentences|textNoSuggestions"
                            android:maxLength="128"
                            android:padding="7dp"
                            android:singleLine="true"
                            android:textSize="@dimen/login_text_size" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_registration"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextLabel_Custom">

                    <EditText
                        android:id="@+id/edt_hospital_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:hint="@string/address"
                        android:inputType="text|textCapSentences|textNoSuggestions"
                        android:maxLength="128"
                        android:padding="7dp"
                        android:singleLine="true"
                        android:textSize="@dimen/login_text_size" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_opening_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_registration"
                        android:layout_weight="1"
                        app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                        app:hintTextAppearance="@style/TextLabel_Custom">

                        <TextView
                            android:id="@+id/edt_hospital_opening_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_access_time_black_24dp"
                            android:drawablePadding="8dp"
                            android:hint="@string/opening_time"
                            android:inputType="text|textCapSentences|textNoSuggestions"
                            android:maxLength="128"
                            android:padding="7dp"
                            android:singleLine="true"
                            android:textSize="@dimen/login_text_size" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_closing_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_registration"
                        android:layout_weight="1"
                        app:errorTextAppearance="@style/CustomTextInputLayoutStyle"
                        app:hintTextAppearance="@style/TextLabel_Custom">

                        <TextView
                            android:id="@+id/edt_hospital_closing_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_access_time_black_24dp"
                            android:drawablePadding="8dp"
                            android:hint="@string/closing_time"
                            android:inputType="text|textCapSentences|textNoSuggestions"
                            android:maxLength="128"
                            android:padding="7dp"
                            android:singleLine="true"
                            android:textSize="@dimen/login_text_size" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>